--- a/Creating features.ipynb
+++ b/Creating features.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "f4303dfd",
    "metadata": {},
    "outputs": [
     {
@@ -32,16 +33,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4629fdbf",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "file=pd.read_excel(\"Merged files.xlsx\",header=0)"
+    "file=pd.read_excel(\"when2heat.xlsx\",header=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "57917593",
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "bf8b4241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +249,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c508f3c",
    "metadata": {},
    "source": [
     "Koeficijent varijacije - odnos standardne devijacije i srednje vrijednosti"
@@ -253,6 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "9b55485e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,6 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "7e047069",
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "a96e7096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,6 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "24634329",
    "metadata": {},
    "outputs": [
     {
@@ -362,6 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "5c1886e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,6 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "fbcf73e8",
    "metadata": {},
    "outputs": [
     {
@@ -768,6 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "af8c9aad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,6 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "0651f628",
    "metadata": {},
    "outputs": [
     {
@@ -848,6 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "5ade9cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,6 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "61110be1",
    "metadata": {},
    "outputs": [
     {
@@ -903,6 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "ee312695",
    "metadata": {},
    "outputs": [
     {
@@ -925,6 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "2c2a1836",
    "metadata": {},
    "outputs": [
     {
@@ -947,6 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "014e3329",
    "metadata": {},
    "outputs": [
     {
@@ -969,6 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "42f320fb",
    "metadata": {},
    "outputs": [
     {
@@ -991,6 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "4cdab55c",
    "metadata": {},
    "outputs": [
     {
@@ -1013,6 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "93c916c7",
    "metadata": {},
    "outputs": [
     {
@@ -1035,6 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "8f2dd240",
    "metadata": {},
    "outputs": [
     {
@@ -1057,6 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "e01eb570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,6 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "47689862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,6 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "269e7e29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,6 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "1e2c47bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,6 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "bb827f68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,6 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "e22b8f44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,6 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "2ed9ead6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,6 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "6f7b0907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,6 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "7e5bb751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,6 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "4d8a8238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,6 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "60084b12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,6 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "3982bfbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,6 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "6fe833a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,6 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "0d839e6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,6 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "7b4b3eef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,6 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "e4df42ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,6 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "663b18fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,6 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "0e7eaa5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,6 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "e581a91e",
    "metadata": {},
    "outputs": [
     {
@@ -1310,6 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "b89c8c54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,6 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "8b310a98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,6 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "f9c77e6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,6 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "1c5b72c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,6 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "02786c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,6 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "926a10d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,6 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "fabfbffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,6 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "b84aef37",
    "metadata": {},
    "outputs": [
     {
@@ -1439,6 +1488,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4989297d",
    "metadata": {},
    "source": [
     "Correlation is a measure of the linear relationship of 2 or more variables. Through correlation, we can predict one variable from the other. The logic behind using correlation for feature selection is that the good variables are highly correlated with the target. Furthermore, variables should be correlated with the target but should be uncorrelated among themselves.\n",
@@ -1450,6 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "a188e5dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,6 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "43e8a6e1",
    "metadata": {},
    "outputs": [
     {
@@ -1527,6 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "de314567",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,6 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "2d1026f5",
    "metadata": {},
    "outputs": [
     {
@@ -1586,6 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "f88b96db",
    "metadata": {},
    "outputs": [
     {
@@ -1611,6 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "ed375916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1623,6 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "187e9997",
    "metadata": {},
    "outputs": [
     {
@@ -1648,6 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "5f0f8923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1663,6 +1721,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "06747f77",
    "metadata": {},
    "outputs": [
     {
@@ -1963,6 +2022,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "3b5ece96",
    "metadata": {},
    "outputs": [
     {
@@ -2057,6 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "41201e11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,6 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
+   "id": "7ec356fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2082,6 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "15c2bf32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,6 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
+   "id": "eae58b4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2109,6 +2173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a6c4a39c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2116,6 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
+   "id": "97d6f712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2129,6 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
+   "id": "ad95a5f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2141,6 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
+   "id": "016f4619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,6 +2226,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
+   "id": "8ba26530",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,6 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
+   "id": "d8519a4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2176,6 +2246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a91646a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,7 +2272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
